# repo-rust-ia

./: .gitignore  README.md
RedDinamico/: Cargo.toml  modelo_v5.json  red-dinamica.py
RedDinamico/src/: lib.rs
back-propagation/: modelo_xor_entrenado.json  prueba.py
back-propagation/src/: lib.rs
enumerar/: Cargo.toml
enumerar/src/: main.rs
enumerar1/: Cargo.toml
enumerar1/src/: main.rs
funcion2/: Cargo.toml
funcion2/src/: main.rs
function/src/: main.rs
function1/: Cargo.toml
function1/src/: main.rs
hola_rust/src/: main.rs
ia_matriz/: Cargo.toml  modelo_final.json  test_final.py
ia_matriz/src/: lib.rs
ia_multivariable/: test_ia_multiple.py
ia_multivariable/src/: lib.rs
ia_persitente/: Cargo.toml  modelo_memoria.json  test_persistencia.py  usar_ia_guardada.py
ia_persitente/src/: lib.rs
manejo-datos/: dataset_crudo.csv
manejo-datos/src/: main.rs
manejo-datos1/: Cargo.toml
manejo-datos1/src/: main.rs
mi_nueva_ia/: detector_spam.py  genera-datos.py  prueba.py
mi_nueva_ia/src/: lib.rs
motor-batches/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  motor-batches.py  predecir.py  prueba_persistencia.py  rustia
motor-batches/.devcontainer/: devcontainer.json
motor-batches/examples/: clasificador_iris.py
motor-batches/src/: lib.rs
motor-batches1/: Cargo.toml  check_model.py
motor-batches1/models/: iris_v1.json
motor-batches1/src/: lib.rs  main.rs
motor-rust-native/: .gitignore  Cargo.toml  README.md
motor-rust-native/src/: lib.rs  main.rs
motor-rust-v2/: .gitignore  Cargo.toml  Dockerfile  README.md  iris.csv
motor-rust-v2/laboratorio-batches/: Cargo.toml
motor-rust-v2/laboratorio-batches/src/: lib.rs  main.rs
motor-rust-v2/src/: lib.rs  main.rs
motor-rust-v3/: .gitignore  Cargo.toml  README.md  bench_model.json  training_log.csv  ver_curva.py
motor-rust-v3/src/: lib.rs  main.rs  mnist_loader.rs
motor-rust-v4/: .gitignore  Cargo.toml  README.md  modelo_v4.json
motor-rust-v4/src/: lib.rs  main.rs  mnist_loader.rs
motor-rust-v5/: .gitignore  Cargo.toml  modelo_v5.json
motor-rust-v5/src/: lib.rs  main.rs
motor-rust-v5/src/data/: mod.rs
motor-rust-v6/: README.md
motor-rust-v6/src/nn/: mod.rs
motor-rust-v7/: .gitignore  Cargo.toml  README.md  dashboard.py
motor-rust-v7/motor-rust-v6/: .gitignore  Cargo.toml
motor-rust-v7/motor-rust-v6/src/data/: mod.rs
motor-rust-v7/src/: lib.rs  main.rs
motor-rust-v7/src/nn/: conv1d.rs  dense.rs  ops.rs
ownership/src/: main.rs
ownership1/src/: main.rs
red-diagnosticada/: .prueba.kate-swp  prueba.py
red-diagnosticada/src/: lib.rs
red_neuronal/: Cargo.toml  red_profunda.json  testa_red.py
red_neuronal/src/: lib.rs
regresion-lineal/: Cargo.toml  estructura.txt
regresion-lineal/src/: lib.rs
rust-ia-1/: .gitignore  Cargo.toml  README.md
rust-ia/src/: main.rs
struct01/: Cargo.toml
struct01/src/: main.rs
v8-prender-led/: .gitignore  Cargo.toml  README.md
v8-prender-led/src/: main.rs
v9-rust-ia/: Cargo.toml
v9-rust-ia/src/: main.rs  model.rs
v9-rust-ia/src/nn/: conv1d.rs  dense.rs  mod.rs  ops.rs
variables/src/: main.rs
vectores01/src/: main.rs
