[package]
name = "mi_motor_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mi_motor_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numpy = "0.21"
