[package]
name = "regresion-lineal"
version = "0.1.0"
edition = "2024"

# 1. Agregamos esta sección nueva para crear una librería de Python
[lib]
name = "regresion_lineal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# LA PIEZA CLAVE:
ndarray = { version = "0.15", features = ["serde"] }
