[package]
name = "motor-rust-v3"
version = "0.3.0"
edition = "2021"

[dependencies]
# Activamos 'rayon' dentro de ndarray para paralelismo automático en álgebra lineal
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[lib]
name = "motor_v3"
path = "src/lib.rs"
