[package]
name = "laboratorio-batches"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-rand = "0.14"
rand_distr = "0.4"
rand = "0.8"
rayon = "1.7"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
